syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.sender";

message TransactionRequest {
  string transactionId = 1;
  string accountId = 2;
  string recipientId = 3;
  int64 debitAmount = 4;
}

message TransactionResponse {
  string result = 1;
}

message HelloRequest {
  string input = 1;
}

message HelloResponse {
  string output = 1;
}

service SenderService {
  rpc deduct(TransactionRequest) returns (TransactionResponse);
  rpc refund(TransactionRequest) returns (TransactionResponse);
  rpc hello(HelloRequest) returns (HelloResponse);
}
